src/test/ui/issues/issue-53498.stderr
error[E0624]: associated function `foo` is private
  --> $DIR/issue-53498.rs:16:27
   |
LL |     test::Foo::<test::B>::foo();
   |                           ^^^ private associated function

error: aborting due to previous error

For more information about this error, try `dustc --explain E0624`.
